--- a/Task-Manager-CRUD-Angular/Frontend/src/app/components/task-form/task-form.component.html
+++ b/Task-Manager-CRUD-Angular/Frontend/src/app/components/task-form/task-form.component.html
@@ -1,58 +1,53 @@
-<div class="fixed z-10 overflow-y-auto top-0 w-full left-0 " id="modal">
-    <div class="flex items-center justify-center min-height-100vh pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-        <div class="fixed inset-0 transition-opacity">
-            <div class="absolute inset-0 bg-gray-900 opacity-75">  </div>
-        </div>
-        <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
-        <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
-            <div class="inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
-                role="dialog" aria-modal="true" aria-labelledby="modal-headline">
-                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-                    
-                    <div class="mb-6">
-                        <label for="username" class="block mb-2 font-medium ">Task Name</label>
-                        <input type="text" id="taskName" formControlName="taskName" class="border rounded-lg  block w-full p-2.5 ">
-                        <p class="mt-2 text-red-600 dark:text-red-500">
-                            {{validationMessage.taskName}}
-                        </p>
+<div class="fixed inset-0 flex items-center justify-center z-50">
+    <div class="bg-white pt-5 rounded-lg shadow-lg z-10 w-80">
+        <div id="defaultModal" tabindex="-1" aria-hidden="true" class=" p-0 overflow-x-hidden overflow-y-auto ">
+            <div class="relative ">
+                <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
+                    <div class="w-80 inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all "
+                        role="dialog" aria-modal="true" aria-labelledby="modal-headline">
+                        <div class="bg-white px-4 ">
+                            <div class="mb-6">
+                                <label for="username" class="block mb-2 font-medium ">Task Name</label>
+                                <input type="text" id="taskName" formControlName="taskName" class="border rounded-lg  block w-full p-2.5 ">
+                                <p class="mt-2 text-red-600 dark:text-red-500">
+                                    {{validationMessage.taskName}}
+                                </p>
+                            </div>
+                            <div class="mb-6">
+                                <label for="username" class="block mb-2 font-medium ">Description</label>
+                                <textarea rows="3" id="description" formControlName="description" class="border rounded-lg  block w-full p-2.5 " >
+                                    </textarea>
+                                <p class="mt-2 text-red-600 dark:text-red-500">
+                                    {{validationMessage.description}}
+                                </p>
+                            </div>
+                            <div class="mb-6">
+                                <label for="username" class="block mb-2  font-medium ">Start Date</label>
+                                <input type="date" id="startDate" formControlName="startDate" class="border  rounded-lg  block w-full p-2.5 " >
+                            </div>
+                            <div class="mb-6">
+                                <label for="username" class="block mb-2  font-medium ">Due Date</label>
+                                <input type="date" id="dueDate" formControlName="dueDate" class="border  rounded-lg  block w-full p-2.5 ">
+                            </div>
+                            <div class="mb-6">
+                                <label for="username" class="block mb-2  font-medium ">Assign To</label>
+                                <input type="text" id="assignedTo" formControlName="assignedTo" class="border  rounded-lg  block w-full p-2.5 ">
+                            </div>
+                        </div>
+                        <div class="mb-6">
+                            <p *ngIf="errorMessage" class="block text-center w-full mb-2  font-medium  text-red-600 dark:text-red-500">
+                                {{errorMessage}}
+                            </p>
+                        </div>
+                        <div class="bg-gray-200 px-4 py-3 text-right">
+                            <button type="button" class="py-2 px-4 bg-gray-500 text-white rounded hover:bg-gray-700 mr-2"
+                                (click)="closeForm()"><i class="fas fa-times"></i> Cancel</button>
+                            <button type="submit" class="py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-700 mr-2"><i
+                                    class="fas fa-plus"></i> Create</button>
+                        </div>
                     </div>
-                    <div class="mb-6">
-                        <label for="username" class="block mb-2 font-medium ">Description</label>
-                        <textarea rows="3" id="description" formControlName="description"
-                            class="border rounded-lg  block w-full p-2.5 " >
-                            </textarea>
-                        <p class="mt-2 text-red-600 dark:text-red-500">
-                            {{validationMessage.description}}
-                        </p>
-                    </div>
-                    <div class="mb-6">
-                        <label for="username" class="block mb-2  font-medium ">Start Date</label>
-                        <input type="date" id="startDate" formControlName="startDate" class="border  rounded-lg  block w-full p-2.5 "
-                            >
-                    </div>
-                    <div class="mb-6">
-                        <label for="username" class="block mb-2  font-medium ">Due Date</label>
-                        <input type="date" id="dueDate" formControlName="dueDate" class="border  rounded-lg  block w-full p-2.5 "
-                            >
-                    </div>
-                    <div class="mb-6">
-                        <label for="username" class="block mb-2  font-medium ">Assign To</label>
-                        <input type="text" id="assignedTo" formControlName="assignedTo" class="border  rounded-lg  block w-full p-2.5 "
-                            >
-                    </div>
-                </div>
-                <div class="mb-6">
-                    <p *ngIf="errorMessage" class="block text-center w-full mb-2  font-medium  text-red-600 dark:text-red-500">
-                        {{errorMessage}}
-                    </p>
-                </div>
-                <div class="bg-gray-200 px-4 py-3 text-right">
-                    <button type="button" class="py-2 px-4 bg-gray-500 text-white rounded hover:bg-gray-700 mr-2"
-                        (click)="closeForm()"><i class="fas fa-times"></i> Cancel</button>
-                    <button type="submit" class="py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-700 mr-2"><i
-                            class="fas fa-plus"></i> Create</button>
-                </div>
+                </form>
             </div>
-        </form>
+        </div>
     </div>
 </div>
